--- a/assets/src/base.scss
+++ b/assets/src/base.scss
@@ -16,23 +16,20 @@ $link-opacity: 0.63;
 
 .fform {
 	transition: transform .2s;
-        background: black !important;
-	color: white !important;
-        border: white !important;
-	border-style: solid !important;
-	border-width: thin !important;
-        margin-top: 7px !important;
-        margin-bottom: 30px !important;
-        margin: auto;
-        max-width: $form-mw;
-	border-radius: $form-radius $form-radius $form-radius $form-radius;
+	margin-top: 7px !important;
+	margin-bottom: 30px !important;
+	margin: auto;
 }
 
 .fform-white {
 	color: black !important;
 }
 
-.fform-select, .select-pure-fl {
+.fform-select-2 {
+	border-radius: $form-radius $form-radius $form-radius $form-radius !important;
+}
+
+.special-fform {
 	transition: transform .2s;
 	--background-color: black !important;
 	--color: white !important;
@@ -42,8 +39,8 @@ $link-opacity: 0.63;
 	--selected-color: white !important;
 }
 
-.select-pure-fl:hover {
-	--color: white !important;
+.fform-select {
+	--background-color: black !important;
 }
 
 .fform-white {
@@ -55,21 +52,10 @@ $link-opacity: 0.63;
 	transform: scale($card-scale);
 }
 
-.search {
-	display: block;
-	width: 37%;
-	padding: 12px !important;
-	margin-bottom: 1px !important;
-}
-
-.btn_s {
-	display: inline !important;
-}
-
 label {
-        color: white !important;
-        font-weight: bold !important;
-        font-size: 16px !important;
+    color: white !important;
+    font-weight: bold !important;
+    font-size: 16px !important;
 	text-align: left !important; 
 	width: $form-mw; 
 	max-width: $form-mw; 
@@ -89,31 +75,24 @@ label {
 }
 
 textarea {
-        max-width: $form-mw;
-        min-height: 20px !important;
+    max-width: $form-mw;
+    min-height: 20px !important;
 	height: 300px !important;
 	resize: none !important;
 }
 
-.bot-card:hover {
-transform: scale($card-scale, $card-scale) perspective(1px) translateZ(0);
-filter: blur;
--webkit-filter: blur(0);
-
+html, body, header, nav, footer {font-family: 'Lexend Deca', sans-serif !important;}
+p {font-family: 'Lexend Deca', sans-serif !important;}
+.btn {
+    border-radius: $form-radius $form-radius $form-radius $form-radius !important;
 }
-.profile-card:hover {
-transform: scale($card-scale, $card-scale) perspective(1px) translateZ(0);
-}
+   
+label {font-size: 14px;}
 
-    html, body, header, nav, footer {font-family: 'Lexend Deca', sans-serif !important;}
-    p {font-family: 'Lexend Deca', sans-serif !important;}
-   .btn {
-            border-radius: $form-radius $form-radius $form-radius $form-radius !important;
-        }
-   label {font-size: 14px;}
 ::selection {
   background: #ffb7b7 !important; /* WebKit/Blink Browsers */
 }
+
 ::-moz-selection {
   background: #ffb7b7 !important; /* Gecko Browsers */
 }
@@ -137,11 +116,12 @@ transform: scale($card-scale, $card-scale) perspective(1px) translateZ(0);
 	}
 }
 
-
 .select-fl {
 	text-decoration: none !important; 
 	background: white !important; 
 	padding: 8px; 
+	overflow: visible !important;
+	width: 100%;
 	border-radius: $form-radius $form-radius $form-radius $form-radius !important;
 }
 
@@ -150,7 +130,7 @@ transform: scale($card-scale, $card-scale) perspective(1px) translateZ(0);
 .content-nomobile {display: none !important;}
 }
 
-  .form {
+.form {
     display: inline-block;
     background-color: white;
     padding: 15px;
@@ -175,63 +155,5 @@ font-weight: bold;
 }
 
 .desc-info {
-background-color: blue;
-}
-
-/* Utlity */
-.white-bold {color: white;font-weight: bold;}
-
-/* Index + Bot Card */
-.hr-is {font-size: 20px; border-top-width: 1px; border-top-color: #eee; width: 90%;}
-.title-is {color: rgba(255,255,255,0.87); margin-left: 15px; font-size: 32px;}
-.div-is {width: 90%;margin: 30px 5%;}
-.bot-card {width: 300px;height: 475px;background: #111112;box-shadow: 0px 0px 20px 5px;border-top-style: none;margin: 25px 25px; border-radius: 10px 10px 10px 10px;}
-.bot-card-banner {width: 100%;height: 30%;background: center / cover no-repeat;}
-.bot-card-avatar {border-radius: 50%;width: 30%;margin: 5% auto;margin-top: 17%;margin-right: 35%;margin-left: 35%}
-.bot-card-username {margin-right: auto;margin-left: auto;margin-top: 30px;}
-.bot-card-username-txt {white-space: nowrap;text-overflow: ellipsis;overflow: hidden; font-size: 21px; margin-top: 35px}
-.bot-card-description {font-size: 16px;font-weight: bold;color: white;opacity: $link-opacity;width: 90%;margin: 0 5%;height:105px}
-.bot-card-cert {color:#7289DA; position: absoulute; margin-top: -15px; margin-left: 90%}
-.bot-card-footer {width: 80%;margin: 0 10%;height: 10%;margin-top: 20px;margin-bottom: 20px;}
-.bot-card-footer-stats {height: 30px !important; width: 55% !important;}
-.i-m3 {margin-right: 3px}
-.bot-card-actions {width: 80%;margin: 0 10%;}
-.bot-card-actions-link {width: 45%; font-weight: bold; border: solid thin !important; outline: none !important;}
-/*width: 45%;margin-right: 5%;border-radius: 25px;font-weight: bold;*/
-.white {color:white;}
-.bold {font-weight: bold;}
-
-
-#up-btn {
-	display: none;
-	/* Hidden by default */
-	position: fixed;
-	/* Fixed/sticky position */
-	bottom: 20px;
-	/* Place the button at the bottom of the page */
-	right: 30px;
-	/* Place the button 30px from the right */
-	z-index: 99;
-	/* Make sure it does not overlap */
-	border: none;
-	/* Remove borders */
-	outline: none;
-	/* Remove outline */
-	background-color: #4caf50;
-	/* Set a background color */
-	color: white;
-	/* Text color */
-	cursor: pointer;
-	/* Add a mouse pointer on hover */
-	padding: 15px;
-	/* Some padding */
-	border-radius: 10px;
-	/* Rounded corners */
-	font-size: 18px;
-	/* Increase font size */
-}
-
-#up-btn:hover {
-	background-color: #1D1E23;
-	/* Add a dark-grey background on hover */
+	background-color: blue;
 }
